adjusted reports/analysis page, fixed responsivity and fixes for dark mode

--- a/themes/kmom02/scss/media-queries.scss
+++ b/themes/kmom02/scss/media-queries.scss
@@ -69,6 +69,17 @@
     .two-col-container {
         flex-direction: column;
     }
+
+    .three-col-flex-content {
+        flex: 1;
+        width: 100%;
+        margin-right: 0;
+        margin-top: 0.5rem;
+    }
+
+    .row {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 451px) {
