--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -4,7 +4,7 @@ $font-main: 'Barlow', Arial, Helvetica, sans-serif;
 $font-headers: 'Bitter', Georgia, 'Times New Roman', Times, serif;
 
 $text: #d4d3dc;
-$heading-color: #afafb7;
+$heading-color: #d4d3dc;
 $background: #16161c;
 $background-rgb: rgb(22, 22, 29);
 $background-secondary: #36363c;
